# ChangeLog for app-laptop/tlp
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  13 Apr 2015; Andre Erdmann <dywi@mailerd.de>
  tlp-9999.ebuild, +files/tlp-init.openrc-r2:
  Changes hashbang in openrc init script from
  /sbin/runscript to /sbin/openrc-run.

* tlp-0.7-r3 (30 Mar 2015)
  30 Mar 2015; Andre Erdmann <dywi@mailerd.de>
  -tlp-0.7-r2.ebuild, +tlp-0.7-r3.ebuild:
  Fix: actually apply the patches mentioned in -r2.

* tlp-0.7-r2 (30 Mar 2015)
  30 Mar 2015; Andre Erdmann <dywi@mailerd.de> +tlp-0.7-r2.ebuild:
  Add upstream patches for Issues #123, #124
  and add kernel config check for CONFIG_PM.

  30 Mar 2015; Andre Erdmann <dywi@mailerd.de> tlp-9999.ebuild:
  CONFIG_PM_RUNTIME has been removed in linux 3.19,
  check for CONFIG_PM instead.

  10 Feb 2015; Andre Erdmann <dywi@mailerd.de> tlp-9999.ebuild:
  Add CONFIG_PM_RUNTIME to the list of required kernel options (CONFIG_CHECK).

*tlp-0.7-r1 (07 Feb 2015)
  07 Feb 2015; Andre Erdmann <dywi@mailerd.de> +tlp-0.7-r1.ebuild,
  tlp-9999.ebuild:
  Install bashcomp alias symlinks, required for autoloading of completion
  files (in >=app-shells/bash-completion-2.1-r90).

  01 Feb 2015; Andre Erdmann <dywi@mailerd.de> -tlp-0.5.ebuild,
  -tlp-0.5-r2.ebuild:
  Remove old ebuilds.

*tlp-0.7 (01 Feb 2015)
  01 Feb 2015; Andre Erdmann <dywi@mailerd.de> +tlp-0.7.ebuild:
  Latest upstream release.

  01 Feb 2015; Andre Erdmann <dywi@mailerd.de> tlp-0.5.ebuild,
  tlp-0.5-r2.ebuild tlp-0.6-r1.ebuild:
  Fix $LICENSE of tpacpi-bat (GPL-3 => GPL-3+).

  01 Feb 2015; Andre Erdmann <dywi@mailerd.de> tlp-9999.ebuild:
  Update openrc init script (wrt bluetooth/NetworkManager, and USE=deprecated);
  Install COPYING, AUTHORS; Fix $LICENSE of tpacpi-bat (GPL-3 => GPL-3+).

  14 Nov 2014; Andre Erdmann <dywi@mailerd.de> tlp-9999.ebuild:
  Also recommended SENSORS_CORETEMP kernel config option.

  14 Nov 2014; Andre Erdmann <dywi@mailerd.de> tlp-9999.ebuild: