@@ -4,13 +4,16 @@ AUX tlp-init.openrc-r1 574 SHA256 b4ae03be2e7b88f9595358b30811051c5373c71cbd771a
 AUX tlp-init.openrc-r2 575 SHA256 dd2a5bade0e904d685a6a8d0313cda6455820dd3bf634b424dac6ebb7c8334ff SHA512 0ba6d3c163cf8743350534a0b61ad2909cf30d527797a923c4d673c5f0fe5d89f48b345d1f42a2b0a278400b09be7bf6e82688dbbd4e9fa71df896fe649bb75a WHIRLPOOL c5905d1b37f8b1733294ae27abe806b3e1d2596019f06474ef351cf8b3ba3b20f471ed5ba66e529e5d24e14a2a517613ebeb2d915f8680d6fb609d4549e71ee9
 DIST tlp-0.6.tar.gz 58141 SHA256 31d05d249aa83a6e43e94cee9f307f37c59934bbf7a37a87adf05cf74073cfe5 SHA512 fc122079795f7711b3f1546832ac644f17a386185e0b9bd86d16687ac16e33b819aebee9613c83f06b462690f10a3213fe927f8ce2796f7156dd2ced825078e6 WHIRLPOOL fafd0be1bf40991c1cf04e2cc69b5f123ad1dd5e04d19b6f0ceb27b6c8eff9c903f6dd4f435d1420da2bedee587d54abedd9fe29a4285faba4dffeba7e4ab2cb
 DIST tlp-0.7.tar.gz 65106 SHA256 bd313f478f897a658f2ca7db9665b8ce6796431b952f7df9aa80e59072cea4ea SHA512 134f3ff87492240413129b5de98ec295457c4e47560c16e95c08598e28af3737d6de5b1132b3d4ef7c4c9535a33d7ea470982ae921e37190e9a21ed0a13a0446 WHIRLPOOL 423da9fef7052d665744ff43c4e2bca48898222f23af324a5f3b34b757ecec11d67ec2cac71b1001a3cb1b5fada40798a6491ac55fd6faa5ee0c9fcc26e102fa
+DIST tlp-0.8.tar.gz 66544 SHA256 d5c0423fde7247cc519001caebd60e538ff5ef2be9456d2049303eef4da1aae3 SHA512 e3a61db77eea0fa6e7e25757fe865aaa6bbc1ccc3e20c4d642beb036a661f670de015a659a2822c70c163d7266d710cd956247cef7160bac02318f004033174e WHIRLPOOL 7705fa6ae6cc3d2adfea0763fa676fabc80d756f603b0f24f0b412bf381c862f509e2fbc672610038745bd10198f10fcadc7154fb1effb85289a33a26010d4b0
 DIST tlp-gentoo-patches-0.6.tar.xz 2676 SHA256 da9532945c19d9be7d8b55e4d22fba6101cab2385f591797b3e0a2eca869e9ff SHA512 b9ad6c34781f27e8619af1fa119e2de7034fab415935390e759f127d018a747c16a6da33ffb4a2d1f435874877d454ce1fb22614e90e424a4525943aaf891a4b WHIRLPOOL f665bd0926756b028a5b3d7f6099813dc849fd08e6cfa6401737607a382d0d5a02d87827b93d20fd77f02f4259d77cab9061b0af104780f2c2dfe68f119c7073
 DIST tlp-gentoo-patches-0.7-r3.tar.xz 4888 SHA256 3835787f6f6036c7fae886f2ed0f5d56bf2644623024766f4fdf5aa94e1dcdfe SHA512 499807b17278cf4bafa5f030e8d29bdda6862be18337962f9747a8e2fb0143c7f16f41cc551e7aab2f276adfd4b6790cb360a4ef1c54d09998f2a14690508364 WHIRLPOOL 2336ea14709fa0c50a73214a6d483b1d6f09cda65e299be2b6c132865ccfc6b18c85e702744ce672714b9bab9eb3fb6e157a9eb188648ff47763d855b0e47ccb
 DIST tlp-gentoo-patches-0.7.tar.xz 2648 SHA256 362f3b7d7c04ef15cde43cc287b0496d318b4af5846c7173ba2978aa659410d1 SHA512 5ae9bdefedf571c5ca03b40b386e522603f516293f1009891a40e0ed80e50c867fe59128fffe0e00c61ad8042dac24ca680019ab93f4da8748a1a74916f34f69 WHIRLPOOL 406f685f922acad92fef76e59852a611d5fe3611abde2e0cee164377005fc5ca18740410a21183c385391212e5e5ba1378e0512e873d7b7fbb043eb29a3dda7d
+DIST tlp-gentoo-patches-0.8.tar.xz 3020 SHA256 18a418b946be422a390b31494a29df3287f1dbb0a42b7276d3ef0119aba3d051 SHA512 3932f3c931909cda77b2ec56d32e5d79bcf7a17064925378e531647e2b120e9a9734b4263450ed00d85d854d91495e1d00202b265df1f0a030e9edb48a9b088f WHIRLPOOL 1913268b31f30f0753df87ae5247cc3d75b2b3450da52f706003bdeae09efba7143922584a96afc7874c2892f4031669ecd4b512745aba6860f3b29f16c99c84
 EBUILD tlp-0.6-r1.ebuild 5189 SHA256 bf3dd43bb581179d5b072441c3ec8f2f72d2ca3cc10e3a1ffa68c1daf2d79053 SHA512 8279d364710bec2846cc5141fc952f78a764c819818e5ee175d0649f20653acd02c66319124b34c263ab870a924cc6918df21c0b4ece02a0b9d1167f90caae6e WHIRLPOOL 20cf684227afc89a18774e871e22efe4e357eb6b08ca6c1be5f622cc57c504c05c29f2d2360c571c94dae05ac1721525a6c115e89c39dc949be04b8ac366379c
 EBUILD tlp-0.7-r1.ebuild 5929 SHA256 a606d67c78425bd08b589efee5b064d9403174ba10d6126ba128c777b1ad8632 SHA512 8ba265aa4c5e20e8dd1c1073c5c942426d6214a2f73b9245e925afd139f61013d028d71f6bf142bdbecb342f1cb303f3aeadae9ad1a4b5f22bac459bd63de2f5 WHIRLPOOL 618c65996207267c3fb85e387f4b6fb0924149c1ba92779028aa00f2d81b5614af89a53d61299b33f5a8a845c7cc7dbeeae4b9c79222b48b05ec8d3bd6fd405f
 EBUILD tlp-0.7-r3.ebuild 6174 SHA256 395f3c9c77217ef7765e41b5ba8d3ebfb8102f7c7f982c0fa57f175ca2dccb0a SHA512 aa40e69df93ab72e014ff91a5c8239f94f7a879d3c475ef6ee680aafdd6d409027b20b1242944509cd50ad3ca148ad777e08a48004627d2432a31550929c5ffa WHIRLPOOL 808b2084b1c20587a66be8a82db8005c21a5b841f079e342b08c9748588f2d85851b6c6b3e58886ad121403b3db13dc6b36b4ba65f9a7302430779da6fc33d1c
 EBUILD tlp-0.7.ebuild 5872 SHA256 157e26abfc58b037d68836e9702c294fe9dad21b98c295cdf72f909b489c858c SHA512 9d975372364e870d83c90e7584a3a7af4be680b9ee15d7cf31427fab54df79e47f98c3317fb05e562101f1f3ba4bc28e6facf28fcc28cfd619972d3507cbc046 WHIRLPOOL 5fd78a09f3730ad6d55df5fdef609336140d096062bc4e35b9b7c5357b5d894165aceca006a76e160982c3a217d369d1bb825910ddada044a60de4aeed0cc0c0
+EBUILD tlp-0.8.ebuild 4189 SHA256 16131e06f8ddccdd0bd35592676465d6f9f6dab8897145ff20b08676bea45170 SHA512 eb2c504f2b930f7aabd25d54c73ee776807f9129f13234956a82476a8ffe9872dea49391723ddf59a90966bde3a9a0ae24ba0ea72e87436cbddad9d0ce201f94 WHIRLPOOL 68df91654948d7eec15ebf56a86cf08e70eef992674452468e3ac363f3b6684be1dc6121d7716ed00032135b69f8b0f387cc9b1751fd537e84ca269066cb3350
 EBUILD tlp-9999.ebuild 6623 SHA256 377abeae3d161212615ac4e551e7f5f55c2d51e6a232a74cf085f1007a2fa6e5 SHA512 bf0628042888f30afc1ac975637a0f943a80c3e1cd352497f00935a066dab552738da864eeeb4d340228b24f644e11a4203751a330d9920633b533b6086d86e5 WHIRLPOOL c769afe161a08a613083eaf4250bb36172b1acf0d778e49b29dfb1fa31fda3c9a2674349574a4771618eff2f0a2d41aa99152a5748b71f8b88e152217d53f5e0
-MISC ChangeLog 12480 SHA256 39346fced0f99064dcd3373f9c725a3d42fe22ea1b17dba727fec71ea83052c5 SHA512 005b0ec7a64b5635f2b6c7abed75a562a13852a65d8784b2e4f33d1fc1a1e9b1f284177f97767c9d5c36a29554e00a0ecc6161e76304fdc3ab8a87b115677b95 WHIRLPOOL 80e049b0ce336ceee64e156eedfca165d4a0293bf24a5471bae8d1a71d0421e0f2c2b759074534b58f08a227f04478ed350b0c7f3b566b6e2bf44c45f71b4228
+MISC ChangeLog 12934 SHA256 1d45631e82192ff63e7667ccad44181399c9c6b54e7db564f7bd81f39ac03faa SHA512 d703126763a268d162684d87f82923e41eee1b9ad3ae7c0f586d90572e626ec74850263c8e7e6535950c76989e2df788f99174a647358c48d3c647ba13688659 WHIRLPOOL 0c0ad2ed9cdf2e1e0e7cc773fea9e05544d8498666831198b42c47e04561d645405eccecd5c2b3bd11093717c548e9a4746d982145bd0343cc98d4895b0b99a2
 MISC metadata.xml 2089 SHA256 1e283f1d356f8c38c0f95a16bf3dc7a769834d7a0d9ba9986c327917afc1cfb6 SHA512 e5cd0ca0f6d16c601f83755ac0ef9d509aa454a802c867a4550631130754c719bb1de36ce2f3283ab8bf4ca9177358260d7d7005a15fcaa64a580e681fc7229b WHIRLPOOL 64f5fd3213fa0552d8b5128a06a78e60c04111b50bacbff57dbaa1a92e2a47f51858dc5f6cd6735c5f0be61ab6c10d8c4c9ae7872bc21a4f6e34d14c03edfacc
